--- a/index.html
+++ b/index.html
@@ -115,7 +115,9 @@
 <!-- CATEGORIES -->
 <h2>Categories</h2>
 <div class="categories">
-    <div class="category-btn" onclick="showProducts('mobile')">📱 Mobile</div>
+    <div class="category-btn" onclick="showProducts('mobile')">
+        <img src="https://i.imgur.com/l30USAk.jpeg">
+    </div>
     <div class="category-btn" onclick="showProducts('fashion')">👗 Fashion</div>
     <div class="category-btn" onclick="showProducts('grocery')">🛒 Grocery</div>
 </div>
