--- a/index.html
+++ b/index.html
@@ -116,9 +116,11 @@
 <h2>Categories</h2>
 <div class="categories">
     <div class="category-btn" onclick="showProducts('mobile')">
-        <img src="https://i.imgur.com/l30USAk.jpeg">
+        <img src="https://i.imgur.com/l30USAk.jpeg/200">
     </div>
-    <div class="category-btn" onclick="showProducts('fashion')">👗 Fashion</div>
+    <div class="category-btn" onclick="showProducts('fashion')">
+        <img src="https://i.imgur.com/Mm1Lodr.jpeg/200">
+    </div>
     <div class="category-btn" onclick="showProducts('grocery')">🛒 Grocery</div>
 </div>
 
