--- a/index.html
+++ b/index.html
@@ -121,7 +121,9 @@
     <div class="category-btn" onclick="showProducts('fashion')">
         <img src="https://i.imgur.com/Mm1Lodr.jpeg/15/15">
     </div>
-    <div class="category-btn" onclick="showProducts('grocery')">🛒 Grocery</div>
+    <div class="category-btn" onclick="showProducts('grocery')">
+        <img src="https://i.imgur.com/ofz0v4V.jpeg/15/15">
+    </div>
 </div>
 
 <!-- SUGGESTED FOR YOU -->
