--- a/index.html
+++ b/index.html
@@ -117,12 +117,15 @@
 <div class="categories">
     <div class="category-btn" onclick="showProducts('mobile')">
         <img src="https://i.imgur.com/l30USAk.jpeg/15/15">
+        <p>Mobile</p>
     </div>
     <div class="category-btn" onclick="showProducts('fashion')">
         <img src="https://i.imgur.com/Mm1Lodr.jpeg/15/15">
+        <p>Fashion</p>
     </div>
     <div class="category-btn" onclick="showProducts('grocery')">
         <img src="https://i.imgur.com/ofz0v4V.jpeg/15/15">
+        <p>Grocery</p>
     </div>
 </div>
 
