--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         <p>Mobile</p>
     </div>
     <div class="category-btn" onclick="showProducts('fashion')">
-        <img src="https://i.imgur.com/Mm1Lodr.jpeg/15/15">
+        <img src="https://i.imgur.com/SgIByVS.jpeg/15/15">
         <p>Fashion</p>
     </div>
     <div class="category-btn" onclick="showProducts('grocery')">
