--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         <p>Fashion</p>
     </div>
     <div class="category-btn" onclick="showProducts('grocery')">
-        <img src="https://i.imgur.com/ofz0v4V.jpeg/15/15">
+        <img src="https://i.imgur.com/422RLjl.jpeg/15/15">
         <p>Grocery</p>
     </div>
 </div>
