--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 <h2>Categories</h2>
 <div class="categories">
     <div class="category-btn" onclick="showProducts('mobile')">
-        <img src="https://i.imgur.com/0vvfBZX.jpeg/15/15">
+        <img src="https://i.imgur.com/YnMp6Ip.jpeg/15/15">
         <p>Mobile</p>
     </div>
     <div class="category-btn" onclick="showProducts('fashion')">
