--- a/index.html
+++ b/index.html
@@ -169,8 +169,8 @@ const products = {
         {name: "Ladies Dress", price: "$22", img: "https://via.placeholder.com/200"},
     ],
     grocery: [
-        {name: "Rice 5kg", price: "$8", img: "https://via.placeholder.com/200"},
-        {name: "Cooking Oil 1L", price: "$4", img: "https://via.placeholder.com/200"},
+        {name: "Sukari 1kg", price: "Tsh1600", img: "https://i.imgur.com/qCzlbox.jpeg/200"},
+        {name: "Chumvi 1kg", price: "Tsh700", img: "https://i.imgur.com/pa8Q4qM.jpeg/200"},
     ]
 };
 
