--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@ const products = {
 
 // SUGGESTED & RECOMMENDED
 const suggested = [
-    {name: "Earbuds", price: "$15", img: "https://via.placeholder.com/200"},
+    {name: "Earbuds", price: "$15", img: "https://i.imgur.com/KI28FyO.jpeg/200"},
     {name: "Smart Speaker", price: "$25", img: "https://via.placeholder.com/200"},
 ];
 
