--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@ const products = {
         {name: "Ladies Dress", price: "$22", img: "https://via.placeholder.com/200"},
     ],
     grocery: [
-        {name: "Sukari 1kg", price: "Tsh1600", img: "https://i.imgur.com/qCzlbox.jpeg/200"},
+        {name: "Sukari 1kg", price: "Tsh1600", img: "https://i.imgur.com/fFbDmn3.jpeg/200"},
         {name: "Chumvi 1kg", price: "Tsh700", img: "https://i.imgur.com/pa8Q4qM.jpeg/200"},
         {name: "sukari 1kg", price: "Tsh 2950", img:" https://i.postimg.cc/5yFmc76w/5kg.jpg"/200},
         {name: "sukari 5kg", price: "TZS 14,750", img: "https://i.postimg.cc/5yFmc76w/5kg.jpg"/200},
