--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ const products = {
         {name: "Chumvi 1kg", price: "Tsh700", img: "https://i.imgur.com/pa8Q4qM.jpeg/200"},
         {name: "sukari 1kg", price: "Tsh 2950", img:" https://i.postimg.cc/5yFmc76w/5kg.jpg"/200},
         {name: "sukari 5kg", price: "TZS 14,750", img: "https://i.postimg.cc/5yFmc76w/5kg.jpg"/200},
-        {name: "KORIE 3Litre", price: "TZS 16,150", img: "https://i.imgur.com/KsDRd5l.jpeg"/200},
+        {name: "KORIE 3Litre", price: "TZS 16,150", img: "https://i.imgur.com/cItWBZS.jpeg"/200},
         {name: "Safi 1litre", price: "TZS 5400", img: "https://i.imgur.com/86XH93r.jpeg"/200},
         
     ]
