--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ const products = {
 // SUGGESTED & RECOMMENDED
 const suggested = [
     {name: "Earbuds", price: "$15", img: "https://i.imgur.com/KI28FyO.jpeg/200"},
-    {name: "Smart Speaker", price: "$25", img: "https://via.placeholder.com/200"},
+    {name: "Smart Speaker", price: "$25", img: "https://i.postimg.cc/4dBBzL0X/afya1.jpg/200"},
 ];
 
 const recommended = [
