--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ const suggested = [
 
 const recommended = [
     {name: "Sports Shoes", price: "$18", img: "https://i.postimg.cc/wvQTFJ5H/kori1.jpg/200"},
-    {name: "Smartwatch", price: "$30", img: "https://via.placeholder.com/200"},
+    {name: "Smartwatch", price: "$30", img: "https://i.postimg.cc/DfQBdztg/azam1.jpg/200"},
 ];
 
 // LOAD SUGGESTED
