--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@ const products = {
         {name: "Tecno Spark 10", price: "$120", img: "https://via.placeholder.com/200"},
     ],
     fashion: [
-        {name: "Men T-shirt", price: "$12", img: "https://via.placeholder.com/200"},
+        {name: "Men T-shirt", price: "$12", img: "https://i.postimg.cc/DZTYn49z/pants2.jpg/200"},
         {name: "Ladies Dress", price: "$22", img: "https://via.placeholder.com/200"},
     ],
     grocery: [
