--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ const products = {
         {name: "sukari 1kg", price: "Tsh 2950", img:" https://i.postimg.cc/5yFmc76w/5kg.jpg"/200},
         {name: "sukari 5kg", price: "TZS 14,750", img: "https://i.postimg.cc/5yFmc76w/5kg.jpg"/200},
         {name: "KORIE 3Litre", price: "TZS 16,150", img: "https://i.imgur.com/cItWBZS.jpeg"/200},
-        {name: "Safi 1litre", price: "TZS 5400", img: "https://i.imgur.com/86XH93r.jpeg"/200},
+        {name: "Safi 1litre", price: "TZS 5400", img: "https://i.postimg.cc/mrg6D1Vj/safi1.jpg"/200},
         
     ]
 };
