--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 // PRODUCT DATA
 const products = {
     mobile: [
-        {name: "Samsung A12", price: "$180", img: "https://via.placeholder.com/200"},
+        {name: "Samsung A12", price: "$180", img: "https://i.postimg.cc/WbrMGphL/coca-cola1.jpg/200"},
         {name: "Tecno Spark 10", price: "$120", img: "https://via.placeholder.com/200"},
     ],
     fashion: [
