--- a/index.html
+++ b/index.html
@@ -163,6 +163,7 @@ const products = {
     mobile: [
         {name: "Samsung A12", price: "$180", img: "https://i.postimg.cc/WbrMGphL/coca-cola1.jpg/200"},
         {name: "Tecno Spark 10", price: "$120", img: "https://i.postimg.cc/wTSwzbRb/pep1.jpg/200"},
+        {name: "Mirinda", price: "1000", img: "https://i.postimg.cc/QCSVbPGX/miri1.jpg"/200},
     ],
     fashion: [
         {name: "Men T-shirt", price: "$12", img: "https://i.postimg.cc/DZTYn49z/pants2.jpg/200"},
